<resources>
    <string name="app_name">LOMA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="introduction">Introduction</string>
    <string name="lemur_origin">Origin of lemurs</string>
    <string name="lemur_extinct">Extinct lemurs</string>
    <string name="species">Species</string>
    <string name="families">Families</string>
    <string name="sites">Watching sites</string>
    <string name="site">Watching site</string>
    <string name="watching">Primate watching</string>
    <string name="posts">Sightings</string>
    <string name="about">About this app</string>
    <string name="authors">About the authors</string>
    <string name="appquit_message">Press again to exit</string>
    <string name="data_not_found">Loading data error</string>
    <string name="txt_image_slider">Slide</string>
    <string name="data_loading">Loading initial data, please wait.</string>
    <string name="no_items">No items detected</string>
    <string name="view">View</string>
    <string name="author">Author</string>
    <string name="action_search">Search</string>
    <string name="search_name">Search name...</string>
    <string name="specie">Lemur</string>
    <string name="no_description">No description for this picture</string>
    <string name="dismiss">dismiss</string>
    <string name="coming_soon">Coming soon !</string>
    <string name="sighting_species_header">Species</string>
    <string name="sighting_species_choose">Tap to choose species</string>
    <string name="sighting_place_choose">Tap to choose place name</string>
    <string name="sighting_sighting_header">Sighting</string>
    <string name="sighting_number_observed">Number observed</string>
    <string name="sighting_longitude">Longitude</string>
    <string name="sighting_latitude">Latitude</string>
    <string name="sighting_altitude">Altitude</string>
    <string name="sighting_setlocation"><![CDATA[Tap to capture lon. & lat. & alt.]]></string>
    <string name="sighting_date_observation_header">Observed on</string>
    <string name="no_sightings">Your list is empty ! Please pull to refresh</string>
    <string name="sighting_add">New sighting</string>
    <string name="select_species">Select species</string>
    <string name="choose_species">Choose species</string>
    <string name="choose_site">Choose place name</string>
    <string name="select_site">Select site</string>
    <string name="take_pict">Take a picture</string>
    <string name="choose_pict">Choose existing picture</string>
    <string name="yes">Yes</string>
    <string name="load_image">Load image</string>
    <string name="stop_location">Tap to stop location capture</string>
    <string name="sighting_title_label">Description</string>
    <string name="action_save">Save</string>
    <string name="save_failed">Save failed, please retry</string>
    <string name="sighting_saved">Your new sighting has been saved</string>
    <string name="edit_sighting">Edit sighting</string>
    <string name="confirm_quit_page">You will lose your unsaved data, leave ?</string>
    <string name="cancelit">Cancel</string>
    <string name="v_specie_req">Species required</string>
    <string name="v_site_req">Place name required</string>
    <string name="invalidData">Fix data</string>
    <string name="closeit">Close</string>
    <string name="v_desc_req">Description is required</string>
    <string name="v_photo_req">Picture required</string>
    <string name="login_title">Login</string>
    <string name="login_lemurs">Lemurs</string>
    <string name="create_account">Create an account</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="terms_of_use">terms of use</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="accept">I agree</string>
    <string name="decline">I decline</string>
    <string name="terms_of_use_title">Terms of use</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="read">I have read</string>
    <string name="read_terms_of_use">Please read and accept terms of use</string>
    <string name="read_policy">Please read privacy policy</string>
    <string name="fill_login">Please fill username</string>
    <string name="fill_password">Please fill password</string>
    <string name="bad_credentials">Wrong login or password</string>
    <string name="server_unreachable">Server is unreachable</string>
    <string name="error_occured">An error occured, please retry</string>
    <string name="username_required">Fill username</string>
    <string name="email_required">Fill email</string>
    <string name="password1_required">Type your password</string>
    <string name="password2_required">Confirm your password</string>
    <string name="password_mismatch">Paswords don\'t match</string>
    <string name="user_registered">User registered successfully ! Please log in to continue..</string>
    <string name="registration">Registration</string>
    <string name="ok">OK</string>
    <string name="register_failed">Register failed, please correct errors</string>
</resources>
