<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_introduction"
            android:icon="@drawable/ico_infos"
            android:title="@string/introduction"
            />
        <item
            android:id="@+id/nav_lemur_origin"
            android:icon="@drawable/arrow61"
            android:title="@string/lemur_origin" />
        <item
            android:id="@+id/nav_lemur_extinct"
            android:icon="@drawable/extinct"
            android:title="@string/lemur_extinct" />

        <item
            android:id="@+id/nav_authors"
            android:icon="@drawable/author"
            android:title="@string/authors" />

        <item
            android:id="@+id/nav_species"
            android:icon="@drawable/ico_specy"
            android:title="@string/species" />
        <item
            android:id="@+id/nav_families"
            android:icon="@drawable/ico_families"
            android:title="@string/families" />

        <item
            android:id="@+id/nav_sites"
            android:icon="@drawable/ico_map"
            android:title="@string/sites" />

        <item
            android:id="@+id/nav_watching"
            android:icon="@drawable/ico_eye"
            android:title="@string/watching" />

    </group>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_posts"
                android:icon="@drawable/ico_posts"
                android:title="@string/posts" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/about" />
        </menu>
    </item>


</menu>
