<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4E342E"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/create_account"
            android:textSize="@dimen/log_size"
            android:gravity="center_horizontal"
            android:textColor="#E0E0E0"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/register_username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/username"
                android:textSize="20sp"
                android:textColorHint="@color/black4c"
                android:textColor="@color/lightGray"/>

            <EditText
                android:id="@+id/register_email"
                android:layout_below="@id/register_username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textColorHint="@color/black4c"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textColor="@color/lightGray"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/register_password1"
                android:layout_below="@id/register_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textColorHint="@color/black4c"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textColor="@color/lightGray"
                />

            <EditText
                android:id="@+id/register_password2"
                android:layout_below="@id/register_password1"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/black4c"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textColor="@color/lightGray"
                />

            <Button
                android:id="@+id/register_signup"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/register_password2"
                android:layout_marginTop="24dp"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/sign_up"
                android:textSize="24sp"
                android:textAllCaps="false"/>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_actions"
                android:layout_below="@id/register_signup"
                android:layout_marginTop="10dp">

                <ProgressBar
                    android:id="@+id/register_progress"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_signinbtn"
                    android:visibility="invisible"
                    />

                <Button
                    android:id="@+id/register_term_ofuse"
                    android:layout_below="@id/register_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/terms_of_use"
                    android:textColor="@color/colorAccent"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/register_privacy_policy"
                    android:layout_below="@id/register_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorAccent"
                    android:textAllCaps="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <Button
                android:id="@+id/register_cancel"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/register_actions"
                android:textAllCaps="true"
                android:text="@string/cancelit"
                android:textSize="16sp"
                />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>
