<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/sighting_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:gravity="bottom"
                android:background="@color/colorPrimaryDark">

                <ImageView
                    android:id="@+id/sighting_image"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:minWidth="200dp"
                    />

                <ImageButton
                    android:id="@+id/sighting_take_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@android:drawable/ic_menu_camera"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_below="@id/sighting_top">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sighting_species_header"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/black4c"/>

            <TextView
                android:id="@+id/sighting_species_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="Daubentonia Madagascariensis (Gmelin, 1788)"
                android:textColor="@color/black32"
                />
            <!---->

            <TextView
                android:id="@+id/sighting_species_trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="18dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="Hay, Hay, tay katsaka tsaramaso boby a"
                /> <!---->

            <Button
                android:id="@+id/sighting_choosespecies_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/sighting_species_choose"
                android:textStyle="bold"
                android:background="?android:attr/selectableItemBackground"
                android:textSize="16dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackcc"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />

            <!--- sighting -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sighting_sighting_header"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/black4c"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                >
                <TextView
                    android:id="@+id/sighting_number_observed_label"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="18dp"
                    android:text="@string/sighting_number_observed"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:textColor="@color/black4c"/>

                <EditText
                    android:id="@+id/sighting_number_observed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/sighting_number_observed_label"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/sighting_sighting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="Ambohitantely special reserve"
                android:textColor="@color/black32"
                />

            <Button
                android:id="@+id/sighting_chooseplace_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/sighting_place_choose"
                android:textStyle="bold"
                android:background="?android:attr/selectableItemBackground"
                android:textSize="16dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackcc"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />

            <!--- altitude -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                >
                <TextView
                    android:id="@+id/sighting_longitude_label"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:textSize="18dp"
                    android:text="@string/sighting_longitude"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:textColor="@color/black4c"/>

                <EditText
                    android:id="@+id/sighting_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/sighting_longitude_label"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                >
                <TextView
                    android:id="@+id/sighting_latitude_label"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:textSize="18dp"
                    android:text="@string/sighting_latitude"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:textColor="@color/black4c"/>

                <EditText
                    android:id="@+id/sighting_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/sighting_latitude_label"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                >
                <TextView
                    android:id="@+id/sighting_altitude_label"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:textSize="18dp"
                    android:text="@string/sighting_altitude"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:textColor="@color/black4c"/>

                <EditText
                    android:id="@+id/sighting_altitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/sighting_altitude_label"/>
            </RelativeLayout>

            <Button
                android:id="@+id/sighting_setlocation_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/sighting_setlocation"
                android:textStyle="bold"
                android:background="?android:attr/selectableItemBackground"
                android:textSize="16dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackcc"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                >
                <TextView
                    android:id="@+id/sighting_date_observation_label"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="18dp"
                    android:text="@string/sighting_date_observation_header"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:textColor="@color/black4c"/>

                <EditText
                    android:id="@+id/sighting_date_observation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/sighting_date_observation_label"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
            </RelativeLayout>



        </LinearLayout>

    </RelativeLayout>





</ScrollView>